resolves #63 expand nav eagerly to prevent it from flickering between pages (PR #64)

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -75,6 +75,10 @@
   height: var(--nav-panel-menu-height);
 }
 
+.nav-panel-menu.is-loading {
+  visibility: hidden;
+}
+
 .nav-panel-menu:not(.is-active) .nav-menu {
   opacity: 0.75;
 }
